Profile page complete

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "@sendinblue/client": "^3.3.1",
+    "@sentry/browser": "^7.69.0",
     "@sentry/nextjs": "^7.69.0",
     "@supabase/supabase-js": "^2.33.2",
     "@types/node": "20.6.0",
